--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-bootstrap": "~1.1.2",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-validation-match": "~1.5.2"
+    "angular-validation-match": "~1.5.2",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
